# rcmt

./: .dockerignore  .gitignore  .licenserc.yaml  .openapi-generator-ignore  .readthedocs.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  mkdocs.yml  openapi.yaml  pyproject.toml  requirements.txt  runtime.txt
.github/: dependabot.yml  renovate.json
.github/workflows/: main.yaml  pull_request.yaml  pull_request_title.yaml  release-please.yaml  tag.yaml
.openapi-generator/: FILES
docker/: entrypoint.sh
docs/: action.rst  cli.rst  conf.py  configuration.rst  contributing.md  customization.rst  encoding.rst  faq.rst  index.md  index.rst  installation.rst  matcher.rst  package.rst  requirements.txt  run.rst  sources.rst  task.rst
docs/examples/custom_action/: index.md  task.py
docs/examples/custom_configuration/: config.yaml  env_vars.py  file.py
docs/examples/custom_filter/: index.md  task.py
docs/examples/custom_matcher/: index.md  task.py
docs/examples/customization/: custom_action.py  custom_action_globmixin.py  custom_source.py  customization.py
docs/examples/event_handler/: task.py
docs/examples/load_file/: index.md  run.py  task.py
docs/examples/multiple_tasks/: index.md  task.py
docs/examples/package/: run.py
docs/examples/semgrep/: semgrep-rules.yaml  task.py
docs/examples/simple/: index.md  matcher.yaml  run.py  task.py
docs/examples/templating/: matcher.yaml  run.py  task_custom.py  task_default.py
docs/examples/writing_a_matcher/: task.py
docs/examples/writing_an_action/: task.py
docs/features/: events.md  unit-testing.md
docs/get-started/: custom-config.md  events.md  how-it-works.md  templating.md  tutorial.md
docs/operations/: metrics.md
docs/reference/: actions.md  cli.md  configuration.md  filters.md  matchers.md  task.md  unittest.md
hack/: alembic.ini
rcmt/: __init__.py  action.py  cli.py  config.py  context.py  database.py  encoding.py  event.py  filter.py  fs.py  git.py  log.py  manifest.py  matcher.py  metric.py  package.py  rcmt.py  run.py  schema.py  task.py  typing.py  unittest.py  util.py  validate.py  verify.py
rcmt/action/: __init__.py  semgrep.py
rcmt/database/: __init__.py
rcmt/database/migrations/: env.py
rcmt/database/migrations/versions/: 1ebf5b1ca7fe_add_model_run.py  40c6a3d91ab8_add_models_run_and_pullrequest.py  4a7ab4aa5929_add_model_extension.py  562dd5b686a4_add_model_run.py  6f7e31fa5d9d_add_model_extension.py  b3117b16eb76_add_model_extension.py
rcmt/package/: __init__.py  action.py  loader.py  manifest.py
rcmt/source/: __init__.py  github.py  gitlab.py  local.py  source.py
rcmt/source/gitea/: __init__.py  client_README.md
rcmt/source/gitea/client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
rcmt/source/gitea/client/api/: __init__.py  activitypub_api.py  admin_api.py  issue_api.py  miscellaneous_api.py  notification_api.py  organization_api.py  package_api.py  repository_api.py  settings_api.py  user_api.py
rcmt/source/gitea/client/docs/: APIError.md  AccessToken.md  ActivityPub.md  ActivitypubApi.md  AddCollaboratorOption.md  AddTimeOption.md  AdminApi.md  AnnotatedTag.md  AnnotatedTagObject.md  Attachment.md  Branch.md  BranchProtection.md  ChangedFile.md  CombinedStatus.md  Comment.md  Commit.md  CommitAffectedFiles.md  CommitDateOptions.md  CommitMeta.md  CommitStats.md  CommitStatus.md  CommitUser.md  ContentsResponse.md  CreateAccessTokenOption.md  CreateBranchProtectionOption.md  CreateBranchRepoOption.md  CreateEmailOption.md  CreateFileOptions.md  CreateForkOption.md  CreateGPGKeyOption.md  CreateHookOption.md  CreateIssueCommentOption.md  CreateIssueOption.md  CreateKeyOption.md  CreateLabelOption.md  CreateMilestoneOption.md  CreateOAuth2ApplicationOptions.md  CreateOrgOption.md  CreatePullRequestOption.md  CreatePullReviewComment.md  (+128 more)
rcmt/source/gitea/client/models/: __init__.py  access_token.py  activity_pub.py  add_collaborator_option.py  add_time_option.py  annotated_tag.py  annotated_tag_object.py  api_error.py  attachment.py  branch.py  branch_protection.py  changed_file.py  combined_status.py  comment.py  commit.py  commit_affected_files.py  commit_date_options.py  commit_meta.py  commit_stats.py  commit_status.py  commit_user.py  contents_response.py  create_access_token_option.py  create_branch_protection_option.py  create_branch_repo_option.py  create_email_option.py  create_file_options.py  create_fork_option.py  create_gpg_key_option.py  create_hook_option.py  create_issue_comment_option.py  create_issue_option.py  create_key_option.py  create_label_option.py  create_milestone_option.py  create_o_auth2_application_options.py  create_org_option.py  create_pull_request_option.py  create_pull_review_comment.py  create_pull_review_options.py  (+119 more)
rcmt/source/gitea/client/test/: test_access_token.py  test_activity_pub.py  test_activitypub_api.py  test_add_collaborator_option.py  test_add_time_option.py  test_admin_api.py  test_annotated_tag.py  test_annotated_tag_object.py  test_api_error.py  test_attachment.py  test_branch.py  test_branch_protection.py  test_comment.py  (+155 more)
tests/: test_action.py  test_matcher.py  test_package.py  test_rcmt.py  test_run.py  test_task.py  test_unittest.py  test_util.py  test_validate.py  test_verify.py
tests/action/: test_semgrep.py
tests/fixtures/test_rcmt/ExecuteTest/: run.py  run_disabled.py  task.py  task_disabled.py  task_exception.py
tests/fixtures/test_task/test_read__not_registered/: task.py
tests/fixtures/test_task/test_read__not_registered_ignore_extended_class/: task.py
tests/fixtures/test_validate/invalid/: task_two.py
tests/fixtures/test_validate/valid/: task_one.py  task_two.py
tests/package/: test_action.py  test_package.py
tests/source/: test_github.py  test_gitlab.py  test_source.py
(+11 files in other folders)
