[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rcmt"
version = "0.20.1"
description = ""
license = "LGPL-3.0-only"
authors = [ "Markus Meyer <hydrantanderwand@gmail.com>",]
readme = "README.md"
repository = "https://github.com/wndhydrnt/rcmt"
documentation = "https://rcmt.readthedocs.io/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)"
]

[tool.poetry.urls]
Changelog = "https://github.com/wndhydrnt/rcmt/blob/main/CHANGELOG.md"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true
plugins = "sqlalchemy.ext.mypy.plugin"

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = ">=5.4.1,<7.0.0"
PyGithub = "^1.55"
GitPython = "^3.1.18"
pydantic = "^1.8.2"
structlog = ">=21.1,<23.0"
mergedeep = "^1.3.4"
toml = "^0.10.2"
click = "^8.0.1"
colorama = "^0.4.4"
python-gitlab = ">=2.10,<4.0"
humanize = "^4.2.3"
python-slugify = ">=7,<9"
sqlalchemy = {extras = ["mypy"], version = ">=1.4.44,<3.0.0"}
alembic = "^1.8.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^6.2.1"
sphinx-rtd-theme = "^1.2.0"
sphinx-autodoc-typehints = "^1.19.2"
sphinx-click = "^4.4.0"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
isort = "5.12.0"
pytest = "^7.2.1"
mypy = "1.1.1"
types-toml = "^0.10.8"
types-PyYAML = "^6.0.12"
flake8 = "^6.0.0"
types-python-slugify = "^7.0.0.1"

[tool.poetry.scripts]
rcmt = "rcmt.cli:main"

[tool.coverage.run]
command_line = "-m pytest"
omit = [ ".venv/*", "tests/*",]
source = [ ".",]

[tool.poetry.dev-dependencies.coverage]
extras = [ "toml",]
version = "5.5"
